# terminal-widgets

./: .gitignore  MANIFEST.in  PYPI-README.md  README.md  main.py  pyproject.toml  setup.cfg
.github/workflows/: publish.yml
config/: base.yaml
config/widgets/: clock.yaml  greetings.yaml  neofetch.yaml  resources.yaml  todo.yaml
core/: base.py
docs/: configuration_guide.md  index.md  setup_guide.md  widget_guide.md
twidgets/: cli.py  main.py
twidgets/config/: base.yaml
twidgets/config/widgets/: neofetch.yaml
twidgets/core/: base.py
twidgets/widgets/: calendar_widget.py  clock_widget.py  greetings_widget.py  mode_widget.py  neofetch_widget.py  news_widget.py  resources_widget.py  todo_widget.py  weather_widget.py
widgets/: calendar.py  clock.py  greetings.py  mode.py  neofetch.py  news.py  resources.py  todo.py  weather.py
