[metadata]
name = twidgets
version = 1.0.1
author = IceWizard7
author_email = noreply@example.com
description = This tool lets you design and run dynamic, customizable dashboards directly inside your terminal.
              It combines modular widgets, real-time data updates, and flexible layout management
              for a highly interactive CLI experience.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IceWizard7/terminal-widgets
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:twidgets
package_dir =
    = .

python_requires = >=3.13

install_requires =
    psutil~=7.1.3
    requests~=2.32.5
    feedparser~=6.0.12
    PyYAML~=6.0.3
    python-dotenv~=1.2.1


[options.entry_points]
console_scripts =
    twidgets = twidgets.cli:main

[options.package_data]
include_package_data = True
