[metadata]
name = twidgets
version = 1.0.1
author = IceWizard7
author_email = noreply@example.com
description = A tool to design and run dynamic, customizable dashboards directly inside your terminal.

long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IceWizard7/terminal-widgets

license = Apache-2.0

classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = .

python_requires = >=3.13

install_requires =
    psutil~=7.1.3
    requests~=2.32.5
    feedparser~=6.0.12
    PyYAML~=6.0.3
    python-dotenv~=1.2.1


[options.entry_points]
console_scripts =
    twidgets = twidgets.cli:main

[options.package_data]
include_package_data = True
twidgets = **/*.yaml, **/*.yml, **/*.env.example
