[metadata]
name = twidgets
version = 1.1.4
author = IceWizard7
author_email = noreply@example.com
description = A tool to design and run dynamic, customizable dashboards directly inside your terminal.

long_description = file: PYPI-README.md
long_description_content_type = text/markdown
url = https://github.com/IceWizard7/terminal-widgets

project_urls =
    Homepage = https://github.com/IceWizard7/terminal-widgets
    Documentation = https://github.com/IceWizard7/terminal-widgets/wiki
    Source = https://github.com/IceWizard7/terminal-widgets
    Issues = https://github.com/IceWizard7/terminal-widgets/issues

license = Apache-2.0

classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = .

python_requires = >=3.10

install_requires =
    psutil~=7.1.3
    requests~=2.32.5
    feedparser~=6.0.12
    PyYAML~=6.0.3
    python-dotenv~=1.2.1


[options.entry_points]
console_scripts =
    twidgets = twidgets.cli:main

[options.package_data]
include_package_data = True
twidgets = **/*.yaml, **/*.yml, **/*.env.example
